# klett

./: .gitignore
cunk/: CMakeLists.txt
cunk/build_debug/: CTestTestfile.cmake  event_test  executor_test
cunk/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  LEARNING_GUIDE.md
cunk/examples/: basic_usage.cpp
cunk/include/: Concurrency.h
cunk/include/concurrency/: Common.h
cunk/include/concurrency/async/: AsyncTask.h
cunk/include/concurrency/backpressure/: BackpressurePolicy.h
cunk/include/concurrency/event/: Event.h  EventLoop.h  IEventLoop.h
cunk/include/concurrency/executor/: IExecutor.h  Task.h  ThreadPoolExecutor.h
cunk/include/concurrency/metrics/: Metrics.h
cunk/include/concurrency/queue/: IQueue.h  MPMCQueue.h
cunk/include/concurrency/scheduler/: Scheduler.h
cunk/src/event/: EventLoop.cpp
cunk/src/executor/: ThreadPoolExecutor.cpp
cunk/src/scheduler/: Scheduler.cpp
cunk/tests/: async_test.cpp  event_test.cpp  executor_test.cpp  queue_test.cpp  scheduler_test.cpp  stress_test.cpp
luft/: CMakeLists.txt  README.md  imgui.ini
luft/build-coverage/: CTestTestfile.cmake  coverage.info  coverage_raw.info  luft_sim  luft_tests[1]_include.cmake  luft_tests[1]_tests.cmake
luft/build-coverage/Testing/Temporary/: CTestCostData.txt
luft/build-coverage/coverage_html/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
luft/build-coverage/coverage_html/core/: aerodynamics.cpp.func-sort-c.html  aerodynamics.cpp.func.html  aerodynamics.cpp.gcov.html  aircraft_state.h.func.html  (+42 more)
luft/config/: default.cfg
luft/docs/: architecture.md  developer_guide.md  flight_dynamics_theory.md  networking_design.md
luft/scripts/: coverage.sh
luft/src/app/: main.cpp
luft/src/core/: aerodynamics.cpp  aerodynamics.h  aircraft_state.h  atmosphere.cpp  atmosphere.h  config.cpp  config.h  engine_model.cpp  engine_model.h  flight_dynamics.cpp  flight_dynamics.h  input_manager.cpp  input_manager.h  logger.cpp  logger.h  math_types.h  simulation_engine.cpp  simulation_engine.h  wind_model.cpp  wind_model.h
luft/src/ui/: ui_app.cpp  ui_app.h
luft/tests/: test_aerodynamics.cpp  test_atmosphere.cpp  test_config.cpp  test_coverage_gaps.cpp  test_engine.cpp  test_flight_dynamics.cpp  test_input.cpp  test_math.cpp  test_message_codec.cpp  test_network.cpp  test_simulation_engine.cpp  test_wind_model.cpp
nash/: ARCHITECTURE.md  CMakeLists.txt  DEVELOPER_GUIDE.md  DOCUMENTATION_SUMMARY.md  README.md
nash/python/: validate.py
nash/src/: main.cpp
nash/src/algorithms/: homotopy.cpp  lemke_howson.cpp  support_enumeration.cpp
nash/src/core/: game.cpp  strategy.cpp
nash/src/numerics/: linear_algebra.cpp  newton_solver.cpp  path_follower.cpp
nash/tests/: test_game.cpp  test_homotopy.cpp  test_lemke_howson.cpp  test_linear_algebra.cpp  test_main.cpp  test_support_enumeration.cpp
sor/: CMakeLists.txt  README.md
sor/app/: main.cpp
sor/build_gui/: CTestTestfile.cmake  DartConfiguration.tcl  imgui.ini
sor/build_gui/tests/: CTestTestfile.cmake
sor/config/: sor_config.yaml  test_scenarios.yaml
sor/connectors/: CMakeLists.txt  fix_adapter.cpp  fix_adapter.h  simulated_exchange.cpp  simulated_exchange.h  venue_adapter.cpp  venue_adapter.h
sor/core/: CMakeLists.txt  fixed_point.cpp  fixed_point.h  memory_pool.cpp  memory_pool.h  mpsc_queue.h  order.cpp  order.h  spsc_queue.h  types.cpp  types.h
sor/diagrams/: architecture.md  class_diagram.md  diagrams.md  sequence.md  state_machine.md
sor/docs/: api_reference.md  architecture.md  developer_guide.md  end_to_end_flow.md  system.md
sor/execution/: CMakeLists.txt  execution_handler.cpp  execution_handler.h  fill_manager.cpp  fill_manager.h
sor/gateway/: CMakeLists.txt  api_gateway.cpp  api_gateway.h  fix_gateway.cpp  fix_gateway.h  gateway.cpp  gateway.h  zmq_transport.cpp  zmq_transport.h
sor/infra/: CMakeLists.txt  config.cpp  config.h  logging.cpp  logging.h  metrics.cpp  metrics.h  tracing.cpp  tracing.h
sor/market_data/: CMakeLists.txt  aggregator.cpp  aggregator.h  book.cpp  book.h  feed_handler.cpp  feed_handler.h  feed_quality_monitor.cpp  feed_quality_monitor.h  provider.h  provider_factory.cpp  provider_factory.h  replay_engine.cpp  replay_engine.h
sor/market_data/alpaca/: alpaca_normalizer.cpp  alpaca_normalizer.h  alpaca_provider.cpp  alpaca_provider.h
sor/python/: requirements.txt
sor/python/backtesting/: __init__.py  replay_engine.py  scenario_runner.py  strategy_evaluator.py
sor/python/simulation/: __init__.py  market_simulator.py  mock_venue.py  order_book.py
sor/python/tests/: conftest.py  test_backtesting.py  test_market_simulator.py  test_mock_venue.py  test_order_book.py  test_tools.py
sor/python/tools/: __init__.py  fix_message_builder.py  latency_analyzer.py  order_generator.py
sor/risk/: CMakeLists.txt  kill_switch.cpp  kill_switch.h  rate_limiter.cpp  rate_limiter.h  risk_manager.cpp  risk_manager.h
sor/routing/: CMakeLists.txt  best_price.cpp  best_price.h  engine.cpp  engine.h  liquidity_sweep.cpp  liquidity_sweep.h  smart_ioc.cpp  smart_ioc.h  strategy.h  vwap.cpp  vwap.h
sor/scripts/: run_coverage.sh
sor/state/: CMakeLists.txt  order_state_machine.cpp  order_state_machine.h
sor/tests/: CMakeLists.txt  test_helpers.h  test_main_listener.cpp
sor/tests/integration/: CMakeLists.txt  test_order_lifecycle.cpp  test_partial_fills.cpp  test_venue_failover.cpp
sor/tests/unit/: CMakeLists.txt  test_alpaca_normalizer.cpp  test_feed_quality_monitor.cpp  test_fixed_point.cpp  test_market_data.cpp  test_memory_pool.cpp  test_order_state_machine.cpp  test_risk_manager.cpp  test_routing_strategies.cpp  test_sor_controller.cpp  test_thread_safe_aggregator.cpp
sor/ui/: order_params.h  sor_controller.cpp  sor_controller.h  sor_ui.cpp  sor_ui.h  sor_ui_app.cpp
sor/ui/panels/: controls.cpp  controls.h  execution.cpp  execution.h  log_panel.cpp  log_panel.h  market_data.cpp  market_data.h  order_book.cpp  order_book.h  order_entry.cpp  order_entry.h
sor/utils/: CMakeLists.txt  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h
(+41 files in other folders)
